// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - fetching 1`] = `
<section>
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
    maxWidth="lg"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={3}
    >
      <WeightChart />
      <WithStyles(ForwardRef(Grid))
        item={true}
        lg={12}
        md={12}
        xs={12}
      >
        <WithStyles(ForwardRef(Paper))
          className="makeStyles-paper-3"
        >
          <p>
            Fetching...
          </p>
          <WithStyles(ForwardRef(CircularProgress))
            size={15}
          />
        </WithStyles(ForwardRef(Paper))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Fab))
      aria-label="Add"
      className="makeStyles-fab-4"
      color="primary"
      onClick={[Function]}
    >
      <AddIcon />
    </WithStyles(ForwardRef(Fab))>
  </WithStyles(ForwardRef(Container))>
</section>
`;

exports[`renders correctly - fetching error 1`] = `
<section>
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
    maxWidth="lg"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={3}
    >
      <WeightChart />
      <WithStyles(ForwardRef(Grid))
        item={true}
        lg={12}
        md={12}
        xs={12}
      >
        <WithStyles(ForwardRef(Paper))
          className="makeStyles-paper-3"
        >
          <p>
            Oh no, something went wrong!
          </p>
        </WithStyles(ForwardRef(Paper))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Fab))
      aria-label="Add"
      className="makeStyles-fab-4"
      color="primary"
      onClick={[Function]}
    >
      <AddIcon />
    </WithStyles(ForwardRef(Fab))>
  </WithStyles(ForwardRef(Container))>
</section>
`;

exports[`renders correctly 1`] = `
<section>
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <WithStyles(ForwardRef(Container))
    className="makeStyles-container-2"
    maxWidth="lg"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={3}
    >
      <WeightChart />
      <WithStyles(ForwardRef(Grid))
        item={true}
        lg={12}
        md={12}
        xs={12}
      >
        <WeightTable
          rows={
            Array [
              Object {
                "createdAt": "2019-08-07T08:00:03Z",
                "weight": 80,
              },
            ]
          }
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Fab))
      aria-label="Add"
      className="makeStyles-fab-4"
      color="primary"
      onClick={[Function]}
    >
      <AddIcon />
    </WithStyles(ForwardRef(Fab))>
  </WithStyles(ForwardRef(Container))>
</section>
`;
